fix market page reponsive layout problem, give it a min-width without page mess up.
Conflicts:
	app/assets/stylesheets/market.css.scss

--- a/app/assets/stylesheets/market.css.scss
+++ b/app/assets/stylesheets/market.css.scss
@@ -20,6 +20,8 @@
 $min-width: 1280px;
 $min-height: 620px;
 $navbar-height: 51px;
+$min-width: 1180px;
+$navbar-height: 71px;
 $sidebar-width: $brand-width;
 $gutter: 2px;
 $gutter-2x: $gutter * 2;
@@ -43,6 +45,10 @@ body {
 header {
   box-sizing: border-box;
   bottom-border: 0px;
+}
+
+.navbar-static-top {
+  min-width: $min-width;
 }
 
 #wrap {
